# ChangeLog for dev-libs/yajl
# Copyright 1999-2010 Gentoo Foundation; Distributed under the GPL v2
# $Header: $

*yajl-1.0.9 (18 Mar 2010)

  18 Mar 2010; Ondrej Sukup (mimi_vx) <mimi.vx@gmail.com>
  +yajl-1.0.9.ebuild, +metadata.xml:
  initial commit of yajl , thanks to scarabeus and Tommy[D]
