@@ -1,4 +1,5 @@
 DIST yajl-1.0.9.tar.gz 53098 RMD160 d66335786123ad62d439da2aab760d734b0397ec SHA1 2e80be084cd1cbb537f85196872aef93bd1dd76a SHA256 d338c420ce1d94f41db304f100e87b78b6c53a5986bc429812bdc756e1f7959a
 EBUILD yajl-1.0.9.ebuild 432 RMD160 2dd7e43dcf4040910e9ab50ad6d3e5b23bb307d6 SHA1 f353ff4c5fc2e6176a4e13951c7bd231a57d639f SHA256 89cb54b11f8f97f0a6a564b1dc7a3201a6390ecf3ebd5cee6e426724769ec577
-MISC ChangeLog 297 RMD160 dd91189044f4ae13630defc9ba0292b0480334aa SHA1 78cec6df7550164dde64bed3569bd0e700d7f4ec SHA256 7848ee3a70c04009607b9adbb08026906ae335951ba0eb09574a3aa1b47447cf
+EBUILD yajl-9999.ebuild 356 RMD160 fc0903c900a82803bc104d19688c8eefe2013cd5 SHA1 6c7917422a46059ded6d52c0c9aa69c49425d951 SHA256 e185ae029c685e54e5a6100cead9d41d2a258e971b7502ff46f0624dffd7329e
+MISC ChangeLog 407 RMD160 4858e645bc6fc1ab65b55d171576881f4f30ef1f SHA1 671f4ced33eab5bbc95c298d0d03931e4391554a SHA256 e8b10437a154c7eaa5f61922f251ed279b619cc12e497ddc6db7e514998cafe2
 MISC metadata.xml 170 RMD160 645927a396fdc21cdeb089fe42c5397332420ea6 SHA1 ac7f48a14fec325926f9ce1be8fbf1f311b4f2e4 SHA256 d797a2ec6f9dc516c9f9c1a758ee87ad3e8c43101b5dc76c2f872d5bd4639b42
