@@ -1,0 +1,19 @@
+# Copyright 1999-2010 Gentoo Foundation
+# Distributed under the terms of the GNU General Public License v2
+# $Header: $
+
+EAPI="2"
+
+EGIT_REPO_URI="git://github.com/lloyd/${PN}"
+
+inherit cmake-utils git
+
+DESCRIPTION="Small event-driven (SAX-style) JSON parser"
+HOMEPAGE="http://lloyd.github.com/yajl/"
+SRC_URI=""
+
+LICENSE="BSD"
+SLOT="0"
+KEYWORDS=""
+
+IUSE=""
